CHANGELOG
--------------------------

ClanSphere 2009.x.x >> xxxx-xx-xx
___________________________________________________________

-> Added possibility to list only wars of one squad in wars/navlist (gahero/palle)
-> Reworked board toplist for much better performance (duriel)
-> Fixed security incident in usergallery (nenti)
-> Fixed deactivation of contact, joinus and fightus modul (duriel)
-> Fixed vote for gallery pics (fr33z3m4n)
-> Fixed categories creation without access (fr33z3m4n)
-> Fixed many bugs in the server modul (fr33z3m4n)
-> Fixed many bugs in the comments modul, also two security bugs (gahero)


ClanSphere 2009.0.2 >> 2009-07-07
___________________________________________________________

>> Security: Updated FCKEditor to 2.6.4.1 (hajo)

-> Changed fckeditor quickupload to use the matching subdirectory (hajo)
-> Fixed ajax uploads to not cause php errors in some cases (hajo)
-> Fixed install settings 'show' form to work again (hajo)
-> Fixed messages sorting and subject error message (hajo)


ClanSphere 2009.0.1 >> 2009-07-05
___________________________________________________________

-- Recommended PHP version changed to 5.3.0

>> Security: Closed at least two retroactive SQL Injection possibilities (hajo)
>> Security: Closed at least four SQL Injection possibilities in gbook mod (hajo, schiri)

-> Added function cs_cache_clear and a check for the unicode extension (hajo)
-> Fixed charset handling with file operations and escaped special lang chars (hajo)
-> Fixed cs_sql_insertid with Microsoft SQL Server [sqlsrv extension] (hajo)
-> Fixed handling of JPG files in gd-lib with PHP 5.3 and newer (hajo)
-> Moved 'xhtml_old' mode activation to array cs_main for use in setup.php (hajo)
-> Reworked eventguests to make user_id optional and contain more details (hajo)
-> Reworked users navlogin content and theme files (hajo, x-ray)

-- Fixed a few bugs that were reported at "Trac" --


ClanSphere 2009.0 >> 2009-06-12