@@ -6,6 +6,7 @@ ___________________________________________________________
 
 -> Added possibility to list only wars of one squad in wars/navlist (gahero/palle)
 -> Reworked board toplist for much better performance (duriel)
+-> Reworked war statistic - squadbased and more information (gahero)
 -> Fixed security incident in usergallery (nenti)
 -> Fixed deactivation of contact, joinus and fightus modul (duriel)
 -> Fixed vote for gallery pics (fr33z3m4n)
